--- a/authentication-lab/templates/signup.html
+++ b/authentication-lab/templates/signup.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ 
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+
     <meta charset="UTF-8">
     <title>Signup</title>
 </head>
