--- a/authentication-lab/templates/signup.html
+++ b/authentication-lab/templates/signup.html
@@ -34,7 +34,31 @@
                 <input type="password"  name="password" minlength="6">
             </div>
         </div>
+
+         <!-- FULL NAME -->
+        <div>
+            <label>Full Name*</label>
+            <div class="input-group">
+                <input type="text"  name="full_name">
+            </div>
+        </div>
+
+         <!-- Username -->
+        <div>
+            <label>Username*</label>
+            <div class="input-group">
+                <input type="text"  name="username">
+            </div>
+        </div>
         
+         <!-- Bio -->
+        <div>
+            <label>Bio*</label>
+            <div class="input-group">
+                <input type="text"  name="bio" maxlength="280">
+            </div>
+        </div>
+
         <!-- Button -->
         <div>
             <input type="submit"/>
